<resources>
    <string name="app_name">BetaTMDBviewer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="year_of_release">2020-05-06</string>
    <string name="genre">Action, Science Fiction, Adventure</string>
    <string name="favourite_text">Favourite Movie</string>
    <string name="rated_text">High Rated Movies</string>
    <string name="detailed_text">Detailed Movie fragment</string>
    <string name="action_home">Main</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_rated">High Rated</string>
    <string name="error_appstate">Error</string>
    <string name="reload_appstate">Reload</string>
    <string name="popularity">8.1</string>
    <string name="runtime">120</string>
    <string name="originalTitle">Original Title</string>
    <string name="release_date_label">Date: </string>
    <string name="runtime_label">Runtime: </string>
    <string name="genre_label">Genre: </string>
    <string name="popularity_label">Popularity:</string>
    <string name="released">Released: </string>
    <string name="rating">Rating: </string>
    <string name="runtimelabel">Runtime: </string>
    <string name="typeMovie">Movie</string>
    <string name="list">movies</string>
    <string name="favorites">favorites</string>
    <string name="last_search">search</string>
    <string name="settings">settings</string>
    <string name="adult">Adult Content</string>
    <string name="off">Adult content off</string>
    <string name="on">Adult content on</string>
    <string name="settings_header">Settings</string>
    <string name="history">history</string>
    <string name="movie_note">note</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="header_dialog_note">Enter note</string>
    <string name="dialog_note_save">Save</string>
    <string name="dialog_note_cancel">Cancel</string>
    <string name="contacts">contacts</string>
    <string name="default_address">Самара</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="googlemaps">map</string>
    <string name="textAdress">Адрес маркера</string>
    <string name="access_title">Доступ к контактам</string>
    <string name="access_message">Объяснение</string>
    <string name="access_positive_button">Предоставить доступ</string>
    <string name="access_negative_button">Не надо</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="corrupted_data">Неполные данные</string>
    <string name="request_error">Ошибка запроса на сервер</string>
</resources>