<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_back_light"
    tools:context=".view.DetailedMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailedMovieView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:padding="@dimen/padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewBackgroundPoster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_250"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="textStart"
            android:textSize="0dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageViewBackgroundPoster"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/originalTitle"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_40_dp"
            android:padding="@dimen/padding"
            android:text="@string/description"
            android:textSize="@dimen/text_size_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster"
            app:layout_constraintVertical_bias="0.622" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_start_12"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/poster_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />


        <TextView
            android:id="@+id/textViewYearOfReleaseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4_dp"
            android:text="@string/release_date_label"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
            app:layout_constraintTop_toTopOf="@+id/imageViewPoster" />

        <TextView
            android:id="@+id/textViewYearOfRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4_dp"
            android:text="@string/year_of_release"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.977"
            app:layout_constraintStart_toEndOf="@+id/textViewYearOfReleaseLabel"
            app:layout_constraintTop_toTopOf="@id/textViewYearOfReleaseLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:text="@string/genre_label"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toStartOf="@+id/textViewYearOfReleaseLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewYearOfReleaseLabel" />

        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:text="@string/genre"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toStartOf="@+id/textViewYearOfRelease"
            app:layout_constraintTop_toTopOf="@+id/textViewGenreLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewRuntimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:text="@string/runtime_label"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toStartOf="@+id/textViewGenreLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenreLabel" />

        <TextView
            android:id="@+id/textViewRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:text="@string/runtime"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toStartOf="@+id/textViewGenre"
            app:layout_constraintTop_toTopOf="@+id/textViewRuntimeLabel" />

        <TextView
            android:id="@+id/textViewPopularityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_4_dp"
            android:text="@string/popularity_label"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintBottom_toBottomOf="@+id/ImageViewPopularity"
            app:layout_constraintStart_toStartOf="@+id/textViewRuntimeLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeLabel" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImageViewPopularity"
            android:layout_width="31dp"
            android:layout_height="49dp"
            android:src="@drawable/star_rate"
            android:adjustViewBounds="true"
            android:paddingBottom="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="@+id/textViewRuntime"
            app:layout_constraintTop_toTopOf="@+id/textViewPopularity" />

        <TextView
            android:id="@+id/textViewPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8_dp"
            android:paddingTop="@dimen/margin_4_dp"
            android:text="@string/popularity"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_size_detailed_info"
            app:layout_constraintStart_toEndOf="@+id/ImageViewPopularity"
            app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />

        <FrameLayout
            android:id="@+id/detailedLoadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="0dp"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>